Integrated with slack bot + added DB connectivity